--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -1,6 +1,10 @@
-html,body,div,p,h1,h2,h3,h4,h5,h6,header,main,footer,aside,ul,li,span,a,em{
+html,body,div,p,h1,h2,h3,h4,h5,h6,header,main,footer,aside,ul,li,span,a,em,button,section,input{
 	margin:0;
 	padding:0;
+	box-sizing: border-box;
+}
+button,input,textarea,button:focus,input:focus,textarea:focus{
+	outline: none;
 }
 ul,li{
 	list-style: none;
