--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,9 +1,10 @@
+$infoColor:#5c6c71;
 $defaultColor:#26baee;
-$defaultActiveColor:#1d97c1;
+$defaultActiveColor:#cef3ff;
 $primaryColor:#26baee;
 $primaryActiveColor:#53cde2;
-$successColor:#d1f6c1;
-$successActiveColor:#6effbf;
+$successColor:#67c23a;
+$successActiveColor:#7ce249;
 $warningColor:#f8b500;
 $warningActiveColor:#f1c550;
 $dangerColor:#ff5959;
